<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TPac</string>
    <string name="hello_text">Welcome to TPac!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">TPac welcome screen.</string>
    <string name="new_game">New game</string>
    <string name="new_level">Create custom level</string>
    <string name="about">About</string>
    <string name="continue_game">Continue</string>
    <string name="not_implemented_yet">Not implemented yet!</string>
    <string name="level_editor">Level editor</string>
    <string name="save_map">Save!</string>
    <string name="map_saved">Your map was successfully saved!</string>
    <string name="inc_position">inc</string>
    <string name="dec_position">dec</string>
    <string name="level_name">Level name:</string>
    <string name="level_size">Level dimensions:</string>
    <string name="s20">20</string>
    <string name="x">x</string>
    <string name="level_name_hint">My new level</string>
    <string name="continuee">Continue</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_editor_welcome">Please enter name and dimensions</string>
    <string name="name_too_short">Name is too short</string>
    <string name="name_too_long">Maximal length of name is 20 characters</string>
    <string name="enter_dimension">Please enter dimensions of a map</string>
    <string name="map_too_big">This map is too large</string>
    <string name="file_exists">Map with this name already exists</string>
    <string name="can_not_save">This map can not be saved</string>
    <string name="not_empty">Fields required to change are not empty</string>
    <string name="title_activity_map_picker">Please select a map</string>
    <string name="title_activity_game">TPac</string>
    <string name="not_found">Map was not found</string>
    <string name="not_readable">This map is not readable</string>
    <string name="logo_description">Logo</string>
    <string name="show_arrows">Show navigation arrows</string>
    <string name="back">Return</string>
    
    <string name="about_full">Created by T.T. \n\nTPac is only a school project.\n C 2012,2013</string>

    <color name="arrows_background">#66000000</color>

    <string name="push">Push!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>