<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_marginRight="30dp" >

    <TextView
        android:id="@+id/level_name_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_name"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/level_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/level_name_caption"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="@string/level_name_hint" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/level_size_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/level_name"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="37dp"
        android:text="@string/level_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/sizeX"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/level_size_caption"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="30dp"
        android:inputType="numberDecimal"
        android:hint="@string/s20"/>


    <TextView
        android:id="@+id/letterX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/sizeX"
        android:layout_below="@+id/level_size_caption"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/x"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/sizeY"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/letterX"
        android:layout_below="@id/level_size_caption"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/s20"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/show_arrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sizeX"
        android:layout_below="@+id/sizeX"
        android:layout_marginTop="32dp"
        android:text="@string/show_arrows" />
    
    <Button
        android:id="@+id/level_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/level_name_caption"
        android:layout_below="@id/show_arrows"
        android:layout_marginTop="42dp"
        android:text="@string/continuee"
        android:onClick="createLevel" />

    
</RelativeLayout>