<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="8dp"
    android:paddingRight="8dp">
    
	<school.trungi.tpac.levelBuilder.EditorWithButtonsView
	 	android:id="@+id/editor"
		android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="#FFFFFF"
        android:layout_marginBottom="20dp" />
        
	<RelativeLayout android:id="@+id/arrowContainer"
     android:layout_width="match_parent"
     android:layout_height="400dp">

    <ImageView android:id="@+id/imageUp"
      android:onClick="clickUp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:padding="20dp"
      android:background="#FF000000"
      android:src="@drawable/dpad_up" />

    <ImageView android:id="@+id/imageLeft"
      android:onClick="clickLeft"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_centerVertical="true"
      android:padding="20dp"
      android:src="@drawable/dpad_left" />

    <ImageView android:id="@+id/imageRight"
      android:onClick="clickRight"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:padding="20dp"
      android:src="@drawable/dpad_right" />

    <ImageView android:id="@+id/imageDown"
      android:onClick="clickDown"
      android:background="#FF000000"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:padding="20dp"
      android:src="@drawable/dpad_down" />
  </RelativeLayout>
	
	<Button
	    android:id="@+id/inc_button"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
        android:layout_marginLeft="20dp"
	    android:layout_below="@id/editor"
	    android:onClick="decPosition" 
	    android:layout_alignLeft="@id/editor"
	    android:text="@string/dec_position" />
	
		<Button
		android:onClick="clickConfirm"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
        android:layout_marginLeft="20dp"
	    android:text="afasdf" />

	<school.trungi.tpac.levelBuilder.EditorButton
	 	android:id="@+id/editor_field"
		android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/editor"
        android:layout_toRightOf="@id/inc_button"
        android:layout_marginLeft="20dp" />
	
	<Button
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_below="@id/editor"
	    android:layout_toRightOf="@id/editor_field"
	    android:onClick="incPosition"
	    android:text="@string/inc_position"
        android:layout_marginLeft="20dp" />

	<Button
	    android:id="@+id/save_map_button"
	    android:layout_width="80dp"
	    android:layout_height="40dp" 
        android:layout_below="@id/editor"
		android:layout_alignRight="@id/editor"
        android:layout_marginLeft="20dp"
		android:text="@string/save_map"
		android:onClick="saveMap" />
	
</RelativeLayout>